--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,73 +1,40 @@
-Babel==2.11.0
-cachetools==3.1.1
+asgiref==3.6.0
 certifi==2022.12.7
-chardet==3.0.4
+charset-normalizer==3.0.1
 coreapi==2.3.3
 coreschema==0.0.4
-debtcollector==1.22.0
 defusedxml==0.7.1
-Django==2.2.28
-django-cors-headers==2.4.0
-django-debug-toolbar==1.11.1
-django-extensions==2.1.4
-django-filter==2.4.0
-django-model-utils==3.1.2
+Django==4.1.6
+django-cors-headers==3.13.0
+django-extensions==3.2.1
+django-filter==22.1
+django-model-utils==4.3.1
 django-rest-swagger==2.2.0
-djangorestframework==3.11.2
+django_debug_toolbar==3.8.1
+djangorestframework==3.14.0
 djangorestframework-csv==2.1.1
-djangorestframework-gis==0.14
-djangorestframework-xml==1.4.0
-drf-amsterdam==0.1.4
-drf-extensions==0.4.0
-drf-hal-json==0.9.1
+djangorestframework-gis==1.0
+djangorestframework-xml==2.0.0
+drf-amsterdam==0.4.1
+drf-extensions==0.7.1
+drf-hal-json==0.10.0
 drf-nested-fields==0.9.5
-factory-boy==2.11.1
-Faker==1.0.1
-google-api-core==1.7.0
-google-auth==1.6.2
-google-cloud-vision==0.35.2
-googleapis-common-protos==1.5.6
-grpcio==1.17.1
-idna==2.8
-iso8601==0.1.12
-itypes==1.1.0
-Jinja2==2.11.3
-keystoneauth1==3.11.2
-MarkupSafe==1.1.0
-msgpack==0.6.0
-netaddr==0.7.19
-netifaces==0.10.9
-numpy==1.16.6
+idna==3.4
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+numpy==1.24.1
 openapi-codec==1.3.2
-opencv-python==4.0.0.21
-os-service-types==1.4.0
-oslo.config==6.7.0
-oslo.i18n==3.23.0
-oslo.serialization==2.28.1
-oslo.utils==3.39.1
-pbr==5.1.1
-Pillow==8.4.0
-protobuf==3.18.3
-psycopg2-binary==2.7.6.1
-pyasn1==0.4.5
-pyasn1-modules==0.2.3
-pyparsing==2.3.1
-python-dateutil==2.7.5
-python-keystoneclient==4.3.0
-python-swiftclient==3.12.0
+Pillow==9.4.0
+psycopg2==2.9.5
+python-swiftclient==4.1.0
 pytz==2022.7.1
-PyYAML==5.4
-requests~=2.27.1
-rfc3986==1.2.0
-rsa==4.7
-scipy==1.2.0
-sentry-sdk==0.6.6
-simplejson==3.18.0
+requests==2.28.2
+scipy==1.10.0
+sentry-sdk==1.14.0
+simplejson==3.18.1
 six==1.16.0
-sqlparse==0.2.4
-stevedore==3.4.0
-text-unidecode==1.3
+sqlparse==0.4.3
 unicodecsv==0.14.1
-uritemplate==3.0.0
-urllib3~=1.26.14
-wrapt==1.14.1
+uritemplate==4.1.1
+urllib3==1.26.14
