AB#110481 Always return a dummy thumbnail
Because images are created on-the-fly and the
AKS cluster is able to fetch images from the objectstore,
the thumbnail images are not protected.

So, we return a dummy image for a while, until the new
set of properly blurred images is available.

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -26,6 +26,8 @@ COPY --from=builder /usr/local/bin/ /usr/local/bin/
 COPY --from=builder /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
 
 WORKDIR /app
+# Temporary fix for unprotected thumbnails
+COPY dummy-thumbnail.jpg ./
 COPY panorama ./
 COPY deploy /deploy/
 
